--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@
 buildscript {
 	repositories {
         mavenLocal()
-		maven { url 'http://sldka.cak-bz.local:8080/nexus-webapp-1.8.0/content/groups/public' }
+		mavenCentral()
+		maven { url 'http://repo.spring.io/plugins-release' }
 	}
 	dependencies {
 		classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
@@ -58,11 +59,8 @@ allprojects {
 
     repositories {
         mavenLocal()
-		maven { url 'http://sldka.cak-bz.local:8080/nexus-webapp-1.8.0/content/groups/public' }
-        if(isSnapshot) {
-            // allow reading snapshot deps
-            maven { url 'http://sldka.cak-bz.local:8080/nexus-webapp-1.8.0/content/groups/public' }
-        }
+        mavenCentral()
+        maven { url 'http://repo.spring.io/plugins-release' }
     }
 
     test {
